<?xml version="1.0" encoding="UTF-8" ?>
<package>
  <name>map_ray_caster</name>
  <version>0.1.8</version>
  <description>The map_ray_caster package provides a class for cached ray casting
  on maps. The origin of all rays is fixed relative to the map, it is the map center.</description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/map_ray_caster</url>
  <url type="repository">https://github.com/lama-imr/lama_utilities.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama_utilities/issues</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>lama_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>lama_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>


  <export>
  </export>
</package>
